# pico_c_servo_driver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: FreeRTOSConfig.h  control_register.h  uart.h
py_control/: LED_driver_uart.ipynb
src/: control_register.c  debug_utils.c  main.c  servo_pwm.c  uart.c
